--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,7 +1,22 @@
 ---
-k3s_version: v1.23.5:k3s1
-ansible_user: serviceAcc
+k3s_version: v1.23.4:k3s1
+ansible_user: sa
 systemd_dir: /etc/systemd/system
-master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
-extra_server_args: ""
-extra_agent_args: ""
+
+system_timezone: "America/New_York"
+
+flannel_iface: "eth0"
+
+apiserver_endpoint: "192.168.50.222"
+
+k3s_token: ""
+
+extra_server_args: "--no-deploy servicelb --write-kubeconfig-mode 644 --kube-apiserver-arg default-not-ready-toleration-seconds=30 --kube-apiserver-arg default-unreachable-toleration-seconds=30 --kube-controller-arg node-monitor-period=20s --kube-controller-arg node-monitor-grace-period=20s --kubelet-arg node-status-update-frequency=5s"
+extra_agent_args: "--kubelet-arg node-status-update-frequency=5s"
+
+kube_vip_tag_version: "v0.4.3"
+
+metal_lb_speaker_tag_version: "v0.12.1"
+metal_lb_controller_tag_version: "v0.12.1"
+
+metal_lb_ip_range: "192.168.50.80-192.168.50.90"
