--- a/roles/nuke/tasks/main.yml
+++ b/roles/nuke/tasks/main.yml
@@ -8,8 +8,9 @@
   with_items:
     - k3s
     - k3s-node
+    - k3s-init
 
-- name: Running pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
+- name: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
   register: pkill_containerd_shim_runc
   command: pkill -9 -f "k3s/data/[^/]+/bin/containerd-shim-runc"
   changed_when: "pkill_containerd_shim_runc.rc == 0"
@@ -25,7 +26,7 @@
   loop_control:
     loop_var: mounted_fs
 
-- name: Removing files
+- name: Remove service files, binaries and data
   file:
     name: "{{ item }}"
     state: absent
@@ -37,6 +38,6 @@
     - /var/lib/kubelet
     - /var/lib/rancher/k3s
 
-- name: reload daemon
+- name: daemon_reload
   systemd:
     daemon_reload: yes
