--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,5 +1,5 @@
 ---
-k3s_version: v1.23.4:k3s1
+k3s_version: v1.23.4+k3s1
 ansible_user: sa
 systemd_dir: /etc/systemd/system
 
@@ -9,10 +9,10 @@ flannel_iface: "eth0"
 
 apiserver_endpoint: "192.168.50.222"
 
-k3s_token: ""
+k3s_token: "[s$K^KNDh~XY:AkU}BPce%CP89.Zg+Y%1fZ"
 
-extra_server_args: "--no-deploy servicelb --write-kubeconfig-mode 644 --kube-apiserver-arg default-not-ready-toleration-seconds=30 --kube-apiserver-arg default-unreachable-toleration-seconds=30 --kube-controller-arg node-monitor-period=20s --kube-controller-arg node-monitor-grace-period=20s --kubelet-arg node-status-update-frequency=5s"
-extra_agent_args: "--kubelet-arg node-status-update-frequency=5s"
+extra_server_args: "--no-deploy servicelb"
+extra_agent_args: ""
 
 kube_vip_tag_version: "v0.4.3"
 
