--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,11 +1,8 @@
-[master]
-192.168.50.111
-192.168.50.135
-192.168.50.35
+[k3s_master]
+192.168.50.145
 
-[node]
-192.168.50.34
-192.168.50.243
+[k3s_worker]
+192.168.50.47
 
 
 [k3s_cluster:children]
