--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,8 +1,14 @@
-[k3s_master]
-192.168.50.145
+[master]
+192.168.50.111
+192.168.50.135
+192.168.50.35
+192.168.50.34
 
-[k3s_worker]
-192.168.50.47
+
+[worker]
+192.168.50.34
+192.168.50.243
+192.168.50.222
 
 
 [k3s_cluster:children]
