--- a/site/public/manifest.json
+++ b/site/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "Starter Kit",
-    "name": "Dapp University Starter Kit",
+    "name": "Ladder Corp Starter Instance",
     "icons": [
         {
             "src": "favicon.ico",
