--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -27,9 +27,7 @@ tasks:
       - brew install {{.DEPS}} {{.CLI_ARGS}}
     preconditions:
       - sh: command -v brew
-        msg: |
-          'Homebrew is not installed. Using MacOS, Linux or WSL?
-          Head over to https://brew.sh to get up and running.'
+        msg: 'Homebrew is not installed. Using MacOS, Linux or WSL? Head over to https://brew.sh to get up and running.'
     vars:
       DEPS: >-
         age
