--- a/provision/ansible/roles/ubuntu/tasks/locale.yml
+++ b/provision/ansible/roles/ubuntu/tasks/locale.yml
@@ -2,6 +2,6 @@
 
 - name: setting timezone
   community.general.timezene:
-    name: "{{ timezone }}"
+    name: "{{ system_timezone }}"
   when:
     - timezone is defined
