--- a/provision/ansible/roles/ubuntu/tasks/locale.yml
+++ b/provision/ansible/roles/ubuntu/tasks/locale.yml
@@ -1,6 +1,6 @@
 --- 
 - name: setting timezone
-  community.general.timezene:
+  community.general.timezone:
     name: "{{ timezone }}"
   when:
     - timezone is defined
