--- a/provision/ansible/roles/ubuntu/tasks/packages.yml
+++ b/provision/ansible/roles/ubuntu/tasks/packages.yml
@@ -34,7 +34,7 @@
       - software-properties-common
       - unattended-upgrades
       - unzip
-  install_recommends: false 
+  # install_recommends: false 
   update_cache: true
   cache_valid_time: 3600
   autoclean: true 
