--- a/provision/ansible/roles/ubuntu/tasks/network.yml
+++ b/provision/ansible/roles/ubuntu/tasks/network.yml
@@ -7,7 +7,7 @@
     - ansible_hostname != inventory_hostname
 
 - name: update /etc/hosts file 
-  ansible.builtin.blockfile:
+  ansible.builtin.blockinfile:
     path: /etc/hosts
     create: true
     block: |
