--- a/provision/ansible/roles/ubuntu/tasks/user.yml
+++ b/provision/ansible/roles/ubuntu/tasks/user.yml
@@ -2,7 +2,7 @@
 
 - name: add user to sudoers file 
   ansible.builtin.copy:
-    content: "{{ ansible_user }}" ALL=(ALL:ALL) NOPASSWD:ALL" 
+    content: "{{ ansible_user }} ALL=(ALL:ALL) NOPASSWD:ALL" 
     dest: "/etc/sudoers.d/{{ ansible_user }}_nopasswd"
     mode: "0440"
 
