--- a/provision/ansible/roles/ubuntu/tasks/network.yml
+++ b/provision/ansible/roles/ubuntu/tasks/network.yml
@@ -1,24 +1,30 @@
 ---
-
-- name: set hostname using inventory hostname 
+- name: setting hostname 
   ansible.builtin.hostname:
     name: "{{ inventory_hostname }}"
   when:
     - ansible_hostname != inventory_hostname
 
-- name: update /etc/hosts file 
+- name: update etc/hosts
   ansible.builtin.blockinfile:
     path: /etc/hosts
     create: true
     block: |
       127.0.0.1 localhost
       127.0.1.1 {{ inventory_hostname }}
-      
-- name: set system controls for kube
+      # for IPv6 just because 
+      ::1 ip6-localhost ip6-loopback
+      fe00::0 ip6-localnet
+      ff00::0 ip6-mcastprefix
+      ff02::1 ip6-allnodes
+      ff02::2 ip6-allrouters
+      ff02::3 ip6-allhosts
+
+- name: setting system controls for kube 
   ansible.posix.sysctl:
     name: "{{ item.key }}"
-    value: "{{ iteem.value }}"
-    systctl_file: /etc/sysctl.d/99-kubernetes.conf
+    value: "{{ item.value }}"
+    sysctl_file: /etc/sysctl.d/99-kubernetes.conf
     reload: true
   with_dict: "{{ sysctl_config }}"
   vars:
