--- a/provision/ansible/roles/ubuntu/tasks/filesystem.yml
+++ b/provision/ansible/roles/ubuntu/tasks/filesystem.yml
@@ -1,16 +1,16 @@
 ---
-- name: updating max_user_watches
+- name: Update max_user_watches
   ansible.posix.sysctl:
-    name: fs.inotify.max_user_watched
+    name: fs.inotify.max_user_watches
     value: "65536"
     state: present
-    sysctl_files: /etc/sysctl.d/98-kubernetes-fs.conf
+    sysctl_file: /etc/sysctl.d/98-kubernetes-fs.conf
 
-- name: disabling swap mem at runtime
-  ansible.builtin.command: swapoff -a 
+- name: siable swap runtime 
+  ansible.builtin.command: swapoff -a
   when: ansible_swaptotal_mb > 0
 
-- name: disabling swap on boot
+- name: diable swap 
   ansible.posix.mount:
     name: "{{ item }}"
     fstype: swap
@@ -18,4 +18,3 @@
   loop:
     - swap
     - none
-      
