--- a/provision/ansible/playbooks/k3s-install.yml
+++ b/provision/ansible/playbooks/k3s-install.yml
@@ -10,31 +10,31 @@
       pause:
         seconds: 5
   tasks:
-    - name: Check if cluster is installed
+    - name: check if cluster already installed
       ansible.builtin.stat:
         path: "/etc/rancher/k3s/config.yaml"
       register: k3s_check_installed
       check_mode: false
 
-    - name: Set manifest facts
+    - name: set manifest facts 
       ansible.builtin.set_fact:
         k3s_server_manifests_templates: []
         k3s_server_manifests_urls: []
       when: k3s_check_installed.stat.exists
 
-    - name: Install Kubernetes
+    - name: Install Kubernetes through xanmanning role 
       include_role:
         name: xanmanning.k3s
         public: true
 
-    - name: Get absolute path to this Git repository
+    - name: absolute path to git repo
       delegate_to: localhost
       become: false
       run_once: true
       ansible.builtin.command: "git rev-parse --show-toplevel"
       register: repo_abs_path
 
-    - name: Copy kubeconfig to provision folder
+    - name: copy kubeconfig to the provision folder
       run_once: true
       ansible.builtin.fetch:
         src: "/etc/rancher/k3s/k3s.yaml"
@@ -44,7 +44,7 @@
         - k3s_control_node is defined
         - k3s_control_node
 
-    - name: Update kubeconfig with the right IPv4 address
+    - name: update kubeconfig with the correct ip address 
       delegate_to: localhost
       become: false
       run_once: true
@@ -57,7 +57,7 @@
       ansible.builtin.pause:
         seconds: 15
 
-    - name: Remove deployed manifest templates
+    - name: remove templates 
       ansible.builtin.file:
         path: "{{ k3s_server_manifests_dir }}/{{ item | basename | regex_replace('\\.j2$', '') }}"
         state: absent
@@ -66,7 +66,7 @@
         - k3s_server_manifests_templates
         - k3s_server_manifests_templates | length > 0
 
-    - name: Remove deployed manifest urls
+    - name: remove manifest urls
       ansible.builtin.file:
         path: "{{ k3s_server_manifests_dir }}/{{ item.filename }}"
         state: absent
