--- a/provision/ansible/inventory/group_vars/kubernetes/k3s.yml
+++ b/provision/ansible/inventory/group_vars/kubernetes/k3s.yml
@@ -7,9 +7,9 @@ k3s_etcd_datastore: true
 k3s_use_unsupported_config: true 
 k3s_registration_address: "{{ kubevip_address }}"
 k3s_server_manifest_urls:
-  - url: 
+  - url: https://docs.projectcalico.org/archive/v3.22/manifests/tigera-operator.yaml
     filename: tigera-operator.yaml
-  - url: 
+  - url: https://kube-vip.io/manifests/rbac.yaml
     filename: kube-vip-rbac.yaml
 
 k3s_server_manifests_templates:
