--- a/provision/ansible/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/inventory/group_vars/master/k3s.yml
@@ -18,7 +18,7 @@ k3s_server:
   disable-cloud-controler: true 
   write-kubeconfig-mode: "644"
 
-  cluster-cider: "10.42.0.0/16"
+  cluster-cidr: "10.42.0.0/16"
   service-cidr: "10.43.0.0./16"
   kubelet-arg: 
     - "feature-gates-MixedProtocolLBService=true"
