--- a/provision/ansible/inventory/group_vars/master/k3s.yml
+++ b/provision/ansible/inventory/group_vars/master/k3s.yml
@@ -3,10 +3,11 @@ k3s_control_node: true
 
 k3s_server:
   node-ip: "{{ ansible_host }}"
-tls-san:
+
+  tls-san:
     - "{{ kubevip_address }}"
   
-  # docker: false
+  docker: false
   flannel-backend: "none"
   disable:
     - flannel
