--- a/provision/ansible/inventory/group_vars/kubernetes/k3s.yml
+++ b/provision/ansible/inventory/group_vars/kubernetes/k3s.yml
@@ -2,7 +2,7 @@
 k3s_release_version: "v1.23.6+k3s1"
 k3s_install_hard_links: true
 k3s_become: true 
-k3s_debug: true 
+k3s_debug: false 
 k3s_etcd_datastore: true 
 k3s_use_unsupported_config: true 
 k3s_registration_address: "{{ kubevip_address }}"
