--- a/.taskfiles/AnsibleTasks.yml
+++ b/.taskfiles/AnsibleTasks.yml
@@ -29,11 +29,16 @@ tasks:
     cmds:
       - ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yml {{.ANSIBLE_PLAYBOOK_DIR}}/ubuntu-prepare.yml
       
-  install:
-    desc: install kube on nodes 
-    dir: provision/ansible
-    cmds:
-      - ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yml {{.ANSIBLE_PLAYBOOK_DIR}}/k3s-install.yml
+    install:
+      desc: Install kube on nodes
+      dir: provision/ansible
+      cmds:
+        - ansible-playbook -i {{.ANSIBLE_INVENTOTY_DIR}}/hosts.ini {{.ANSIBLE_PLAYBOOK_DIR}}/site.yml
+  # install:
+  #   desc: install kube on nodes 
+  #   dir: provision/ansible
+  #   cmds:
+  #     - ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yml {{.ANSIBLE_PLAYBOOK_DIR}}/k3s-install.yml
 
   nuke:
     desc: uninstall kube on nodes 
