--- a/provision/ansible/inventory/group_vars/all.yml
+++ b/provision/ansible/inventory/group_vars/all.yml
@@ -1,6 +1,27 @@
 ---
-ansible_user: sa
+k3s_version: v1.23.4+k3s1
 systemd_dir: /etc/systemd/system
+ansible_user: sa
 
-timezone: "America/New_York"
+system_timezone: "America/New_York"
 
+
+flannel_iface: "ens18"
+
+# apiserver_endpoint is virtual ip-address which will be configured on each master
+apiserver_endpoint: "192.168.30.222"
+
+k3s_token: "asdjlkhfgadgdfgsdfgsdfghshywtewrthsldkfjasdkjfasdfasdfasdf"
+
+extra_server_args: "--no-deploy servicelb --no-deploy traefik"
+extra_agent_args: ""
+
+
+kube_vip_tag_version: "v0.4.3"
+
+
+metal_lb_speaker_tag_version: "v0.12.1"
+metal_lb_controller_tag_version: "v0.12.1"
+
+
+metal_lb_ip_range: "192.168.50.5-192.168.50.15"
