--- a/provision/ansible/playbooks/site.yml
+++ b/provision/ansible/playbooks/site.yml
@@ -1,9 +1,16 @@
 ---
-- hosts: master, worker
+- hosts: k3s_cluster
   gather_facts: yes
   become: yes
   roles:
-    - role: prereq
-    - role: rpi
-  
+    - role: download
 
+- hosts: master
+  become: yes
+  roles:
+    - role: k3s/master
+
+- hosts: node
+  become: yes
+  roles:
+    - role: k3s/node
