--- a/provision/ansible/roles/k3s/master/tasks/main.yml
+++ b/provision/ansible/roles/k3s/master/tasks/main.yml
@@ -160,14 +160,15 @@
       --kubeconfig ~{{ ansible_user }}/.kube/config
   changed_when: true
 
-- name: Create kubectl symlink
-  file:
-    src: /usr/local/bin/k3s
-    dest: /usr/local/bin/kubectl
-    state: link
 
-- name: Create crictl symlink
-  file:
-    src: /usr/local/bin/k3s
-    dest: /usr/local/bin/crictl
-    state: link
+# - name: Create kubectl symlink
+#   file:
+#     src: /usr/local/bin/k3s
+#     dest: /usr/local/bin/kubectl
+#     state: link
+
+# - name: Create crictl symlink
+#   file:
+#     src: /usr/local/bin/k3s
+#     dest: /usr/local/bin/crictl
+#     state: link
