--- a/provision/ansible/playbooks/k3s.yml
+++ b/provision/ansible/playbooks/k3s.yml
@@ -22,10 +22,18 @@
         k3s_server_manifests_urls: []
       when: k3s_check_installed.stat.exists
 
+  - name: generate helper script locally
+    template:
+      src: templates/k3sup-master.j2
+      dest: /tmp/install_master.sh
+      mode: '0770'
+    when: main == 1
+    delegate_to: localhost
+
     - name: generate helper script on master
         template:
-          src: templates/install_slave.j2
-          dest: "/tmp/install_slave.sh"
+          src: templates/k3sup-worker.j2
+          dest: "/tmp/install_worker.sh"
           mode: '0770'
         when: main == 0
         delegate_to: "{{ bootstrap_master_name }}"
@@ -41,8 +49,8 @@
       register: output2
       delegate_to: localhost
 
-    - name: run k3sup helper script for slave
-      shell: "sh /tmp/install_slave.sh"  
+    - name: run k3sup helper script for worker
+      shell: "sh /tmp/install_worker.sh"  
       when: main == 0 and stat_result.stat.exists == false
       register: output2
       delegate_to: "{{ bootstrap_master_name }}"
