--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,7 @@ vars:
   CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
   ANSIBLE_DIR: "{{.PROJECT_DIR}}/provision/ansible"
   TERRAFORM_DIR: "{{.PROJECT_DIR}}/provision/terraform"
+  HACK_DIR: "{{.PROJECT_DIR}}/setup"
 
 dotenv: [".config.env"]
 
@@ -18,6 +19,7 @@ includes:
   cluster: .taskfiles/ClusterTasks.yml
   precommit: .taskfiles/PrecommitTasks.yml
   terraform: .taskfiles/TerraformTasks.yml
+  bash: .taskfiles/HackTasks.yml
 
 tasks:
 
