--- a/provision/ansible/playbooks/k3s-install.yml
+++ b/provision/ansible/playbooks/k3s-install.yml
@@ -23,8 +23,10 @@
       when: k3s_check_installed.stat.exists
 
     - name: Bootstrap Kube through k3sup bash script
-      ansible.builtin.script: ../../../setup/bootstrap-cluster.sh
-      delegate_to: localhost
+      ansible.builtin.shell:
+        cmd: ./bootstrap-cluster.sh
+        chdir: ../../../setup
+      delegate_to: 127.0.0.1
 
     - name: remove templates 
       ansible.builtin.file:
