--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: forbid-secrets
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.8.4
-    hooks:
-      - id: gitleaks
+  # - repo: https://github.com/zricethezav/gitleaks
+  #   rev: v8.8.4
+  #   hooks:
+  #     - id: gitleaks
