--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -1,6 +1,13 @@
-[master]
-192.168.50.51
-
-[worker]
-192.168.50.225
-192.168.50.105
+---
+kubernetes:
+  children:
+    master:
+      hosts:
+        k3s-master-01:
+          ansible_host: 192.168.50.51
+    worker:
+      hosts:
+        k3s-worker-01:
+          ansible_host: 192.168.50.225
+        k3s-worker-02:
+          ansible_host: 192.168.50.105
