--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ---
 
-fail_fast: false 
+fail_fast: false
 repos:
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.26.3
@@ -17,7 +17,7 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.13
+    rev: v1.2.0
     hooks:
       - id: remove-crlf
       - id: remove-tabs
@@ -29,7 +29,7 @@ repos:
     rev: v2.1.0
     hooks:
       - id: forbid-secrets
-  # - repo: https://github.com/zricethezav/gitleaks
-  #   rev: v8.8.4
-  #   hooks:
-  #     - id: gitleaks
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: v8.8.4
+    hooks:
+      - id: gitleaks
