--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -3,8 +3,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # either keep the ./provision/ansible/inventory/group_vars/kubernetes/k3s.yml updated and re-run playbook to upgrade
-  # OR uncommend 'system-upgrade' line for automatic upgrades 
+  # OR uncommend 'system-upgrade' line for automatic upgrades
   # - system-upgrade
   - default
   - kube-system
   - networking
+  - flux-system
