--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 data:
   METALLB_LB_RANGE: 192.168.50.5-192.168.50.15
-  METALLB_K8S_GATEWAY_ADDR:
+  METALLB_K8S_GATEWAY_ADDR: 192.168.50.116
   METALLB_TRAEFIK_ADDR: 192.168.50.7
