--- a/upsite/package.json
+++ b/upsite/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "history": "^5.3.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
