--- a/cluster/apps/default/botkube/helm-release.yaml
+++ b/cluster/apps/default/botkube/helm-release.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: botkube
 spec:
   interval: 5m
-  chart: infracloudio-charts
+  chart: 
     spec:
       chart: botkube
       version: 0.12.1
