--- a/cluster/apps/default/botkube/secret.sops.yaml
+++ b/cluster/apps/default/botkube/secret.sops.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
     creationTimestamp: null
     name: discord-url
-    namespace: flux-system
+    namespace: botkube
 sops:
     kms: []
     gcp_kms: []
