--- a/cluster/apps/flux-system/notifications/secret.sops.yaml
+++ b/cluster/apps/flux-system/notifications/secret.sops.yaml
@@ -3,9 +3,8 @@ data:
     address: ENC[AES256_GCM,data:b9xADfP+NCDidSpy1MJg4HQ0ThgaUPpkK8eG/ciODCveDHcWpL5MgTlgdHdWkazHHJu2jJ7Qqo4JNCHYcsOSpt1UV/LNNVBwQoerFwcQQXDiKhkplYWv4pktFYc6U04TgzLuRthSB491EK4m5GhjKNjHnp4Ccp1MMH3MgbD+erINgoguTkCh5HEoJl+vB2tg7eBS7aq0whRuqgVvEOJjMg==,iv:Dz07M4tzMeC0OHNqimi0ib2XUX+0CorUIQRKXEt6cqE=,tag:hvEL85GRvJNgxuxVhPzCAg==,type:str]
 kind: Secret
 metadata:
-    creationTimestamp: null
     name: discord-url
-    namespace: botkube
+    namespace: flux-system
 sops:
     kms: []
     gcp_kms: []
