--- a/cluster/apps/flux-system/notifications/kustomization.yaml
+++ b/cluster/apps/flux-system/notifications/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
   - secret.sops.yaml
-
+  - discord-provider.yaml
+  - info-discord-alert.yaml
+  - error-discord-alert.yaml
