--- a/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:1wo=,iv:mEM2PbDdxlTF6UkeCf2h3iFQhF/lw+W4amPGic0f64M=,tag:8BxHJZ1eZJJxIE844IzRdw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:Na7t+GGFqqEVdYvmntE=,iv:5bKb3S9oPxRNxSdi+Amd50mu9/C5Izc6Hh5jfA50c64=,tag:xXXueZFGKphIukjiS6pPtQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:aaY=,iv:fu52MuvlKbck6WY/l95xnllxX1/kTHSpCAUwYQSsBnc=,tag:nAzNWTlczocjOQ1uFyDpcg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:i1Mq4yL2II2ZupZ0+tM=,iv:ongrgH9DvcX8OwAwQJwH7OP0wfcFhR8zB6Ih2wQUACc=,tag:l+R85vhGKmwYD+6dlqElRA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1fk8cpzq0vpmeyrs3x09xdnccfhmcfx65yyf35a0kka9twn8drywscfy3dp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBteDN3c2hnRnZQOHFGcnNi
-            SEw2T0NIV2NuZ3pOZXlBUTBORTJBT1NMelNvCmtlalRkNnVRdzM1bTR2bWxsVVJy
-            UFVMdUF3QTNLNVl2U0QzVkd0SHo1OWcKLS0tIGdXbURtZDRoOWQ2QkZ6eVRQTVhO
-            RFZUYUpXV1ZVODRZOE5lbVNvdnhzV2cKh2PkeZNPLqqn3s8BXsklUTikS6plhTAj
-            ksT7l5BnQ8BonpBny87CiLKN5h/5MbvK3T4yakSB0DMyVE204H3P9w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCVWd1OEgwN3F1azlrb2xF
+            eExKczQ0ZUlNMENObjNlODA4OSs3YlRSdHdzCmZXMXU3U0JkR3V4MkJJRTBET1N4
+            L3FvVkZTWlVnNGhsSVhlUnNvVTFkRDQKLS0tIGtVRDd4eUVuZDBoeFBDdy9aSVpZ
+            RVY4QmRDeS8wU3p6OXBqcHFtQkl5b2MKecF/RXTu2C35QXbu3RTqSPiHx2hiv/bx
+            h7Tea+wqytD80Fe47oeuYUQUkhATpLWuAOY7Ho1UpssYcaAEBzHNzw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-24T00:30:57Z"
-    mac: ENC[AES256_GCM,data:9QxXGpHQTbFOoePnksQlrqj7f0uMOGi94HZIjjm0ENcE9F/xOdH7d2qXkHcq27KZ2kpLAq5KSTP92uAvJSzlBLIqnvPRlXXBFsoQ0U7CnO2azM1K2pLz9TSv6BhyYSoMRswUSSHNiXBcIq2OtFtczLdhuhksKQNwV7Pu39E6GTQ=,iv:fpRl38gtZbSLsWmO10qcAFBwXKzMutcsLw3KjAgStVM=,tag:s3Ev5CvFwseZYtXx0c1zwQ==,type:str]
+    lastmodified: "2022-05-27T17:45:17Z"
+    mac: ENC[AES256_GCM,data:tIU6kZY8pENn5LZfi0nzkgVYYyC9CAXS8A5cYANtfWhJ9bazhD4x+gHrDhtlFAwT5O0RW+w/Re1nRs3+9K0iZYZsbM863uCCnZPSYggWib5gPeg1a8FFRx3cqHAHn8+S09xVM7DFotMFi0x0eQC01pvchIUz6taYWrKH/IlDtDQ=,iv:7xpVzCFzLDbjTX9pkXM00qOntHCKMqOHy+gvSzLm298=,tag:56a8CnmDwyWeSAfTx/+Tuw==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
