--- a/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:EVA=,iv:+Rn6jCpvvQEIE8kozg+lFzRU+rlsjjV8gnPxikKKJfY=,tag:DJWdHMs1leZjY5o8+xPwXw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:XX1JzrDJUJrDrusDF3M=,iv:MDBYpDDCF4Eb2F02jZ87QgaaKN/ImxdsYpzptjjBZtQ=,tag:J15s9bPnQCRCFGf3VMOffw==,type:str]
+ansible_user: ENC[AES256_GCM,data:VII=,iv:i4hxPbiLo2Nlzt3Ct/woKjszETu2pFks7K+mQ20BSE0=,tag:6IMoEKfMHfWwcSmlVZKfXA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:VR6jrGBdly26yr2WvP8=,iv:H3DN2DTy5xYcx6ffVQHh1SrAck/Avi19XWCoI1QkIKc=,tag:zsIj7YokJHMNQT3yJCpp8g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1fk8cpzq0vpmeyrs3x09xdnccfhmcfx65yyf35a0kka9twn8drywscfy3dp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByK0dIOWlPbzNHV3VCV1BY
-            OVpUUEVZajVGSG1Na3RlTWVvWUpGQ3pnelVZCkxBWFBrMGVXeGFwNk9PMENSMC8y
-            Y3J6WUxrUkljdEtWYWtaZUxUKy9jY3MKLS0tIDl3UmlObDA1WEo0UGlONHQ0K1Fn
-            dzg0RlVPUTJtaVBHSENHWG40L1FEUU0KQpzZUZITedWRlKUw5ngIoQ5M62V/rIv2
-            BOHYC8anScGsGBzjAPLUwVBObaX6t473070Dq1dLPA+GQk3HwWgwUA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkazNXcFh5MkFhMVFDWCt3
+            WkdmRXh4U2F4QnAyTzNuN015VU5EaGlnV2lZCjJKaXI2NFRkSkY2bUNvcDFBQUhl
+            MlVlWFN5WWtvaFlNT1A4TU0rK05YWGsKLS0tIHkzOE0wNUF5U29Icmh5R01PNDJN
+            b0pRamNzLzc2K2p1Ry9rMlBjRlNhSFkKZAr5omjuIKTG5dFuwWsuna7LAOp/en4J
+            zqRGeRx52LtFeXuTCoh4OqWFmXb7am0R4OQcdDZhdRr75AduQiEwOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-24T00:30:57Z"
-    mac: ENC[AES256_GCM,data:ney73TlNpFsw6m6/Jof4ZNQ6CqwCaAsH9xwX/grvfyXfmZ46g5QxSKkWEzpxhPyGDXdpskurDyrEzLJ/EN4HA2IN2SyjTn86dHqym+3NIPvaafOpK5kBR1nxmkSriwBJEuUgEQuZswPysbZ7mc/1L20SfTcMH11l+wuxlk/vvoU=,iv:B/7TILW0K77YxNNDiZYuynlCtDC4gtWoAqKvjwAva60=,tag:O5gn+ijwxwc8Tj1H13DzNw==,type:str]
+    lastmodified: "2022-05-27T17:45:17Z"
+    mac: ENC[AES256_GCM,data:eufpPQ20kQnsppKhVxE/SKHEJi3Bb2QJ812tVchbflaj42xs/MOJU8wqRIDQL70Fbul9x3GE13zK9RjqemM32txX3LD5gYx9C+DP2lgKvTACmMxqQ1anAvQoguRYtGVyuLaO97LedAVEVS/iKaMLoHN2qNEn8j2TFe4oKpJhqOI=,iv:i6NkwuwonEoApXHi61JkZt2eG5nlIECwoN3+DF6sww8=,tag:QYDvrJEcd9ydl/Ia8C8pPg==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
