--- a/kubemanifest.yaml
+++ b/kubemanifest.yaml
@@ -28,7 +28,7 @@ items:
       creationTimestamp: null
       labels:
         io.kompose.service: mysql-db
-      name: mysql_db
+      name: mysql-db
     spec:
       ports:
         - name: "9906"
@@ -85,7 +85,7 @@ items:
           containers:
             - env:
                 - name: ADMINER_DEFAULT_SERVER
-                  value: mysql_db
+                  value: mysql-db
               image: adminer:latest
               name: adminer
               ports:
@@ -289,7 +289,7 @@ items:
                 - name: MYSQL_USER
                   value: MYSQL_USER
               image: mysql
-              name: mysql_db
+              name: mysql-db
               ports:
                 - containerPort: 3306
               resources: {}
