--- a/cluster/client-deployment.yaml
+++ b/cluster/client-deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-Deployment
+  name: client-deployment
 spec:
   replicas: 1
   selector:
