--- a/upsite/package.json
+++ b/upsite/package.json
@@ -8,9 +8,10 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-validation": "^0.1.11",
+    "react-button": "^1.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
