--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -11,3 +11,5 @@ kubernetes:
           ansible_host: 192.168.50.225
         k3s-worker-02:
           ansible_host: 192.168.50.105
+        k3s-worker-03:
+          ansible_host: 192.168.50.78
