--- a/initial/cluster/gotk-sync.yml
+++ b/initial/cluster/gotk-sync.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 5m0s
   ref:
-    branch: main
+    branch: infra
   url: ${BOOTSTRAP_GIT_REPOSITORY}
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
