--- a/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-worker-01.sops.yml
@@ -1,23 +1,23 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:VII=,iv:i4hxPbiLo2Nlzt3Ct/woKjszETu2pFks7K+mQ20BSE0=,tag:6IMoEKfMHfWwcSmlVZKfXA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:VR6jrGBdly26yr2WvP8=,iv:H3DN2DTy5xYcx6ffVQHh1SrAck/Avi19XWCoI1QkIKc=,tag:zsIj7YokJHMNQT3yJCpp8g==,type:str]
+ansible_user: ENC[AES256_GCM,data:wr8=,iv:jbgSo5wGDNlKrqnBhCYHn0lDk/Q1xQR5U3DWDmswrGo=,tag:z9TP13bcEBjSO9NJcJfP4Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:j8sT5iJn6iOW226fxxs=,iv:5uEDrRkx+bjBdN4kytjVhfARrWtwVAXJlX2BENJB1mA=,tag:iTXTgXE2t+6e8vrImPDl8A==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1fk8cpzq0vpmeyrs3x09xdnccfhmcfx65yyf35a0kka9twn8drywscfy3dp
+        - recipient: age1vd5j7kge9c8w8t3aj3ekk4gp98fxhaqaptj224yl9aq3nekns30qneex5d
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkazNXcFh5MkFhMVFDWCt3
-            WkdmRXh4U2F4QnAyTzNuN015VU5EaGlnV2lZCjJKaXI2NFRkSkY2bUNvcDFBQUhl
-            MlVlWFN5WWtvaFlNT1A4TU0rK05YWGsKLS0tIHkzOE0wNUF5U29Icmh5R01PNDJN
-            b0pRamNzLzc2K2p1Ry9rMlBjRlNhSFkKZAr5omjuIKTG5dFuwWsuna7LAOp/en4J
-            zqRGeRx52LtFeXuTCoh4OqWFmXb7am0R4OQcdDZhdRr75AduQiEwOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPdjRTVUtJMFUxdFUvaFhk
+            US93cmdkL283eGdrVEZ4OGtpdVE5Y05NbUZVCmY4ZEdwN1RJU3BKVUQrL01BMHQv
+            eVdSZStWVUlnL2Z5NGZRVzBodXk4Q3cKLS0tIDJkNmNTSE15anNkYVBZcW1TdVBX
+            WkUxTUlxNExyaUhSKzBvUzlkWnl2NkkKorxSUpQm+sH1ZR7HFaumekK6W+htGf6d
+            UcQgriy64a9kVm6H16K6KZt3cjjmb6J5t4UvodibDMRzaHKw6CJi9g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-27T17:45:17Z"
-    mac: ENC[AES256_GCM,data:eufpPQ20kQnsppKhVxE/SKHEJi3Bb2QJ812tVchbflaj42xs/MOJU8wqRIDQL70Fbul9x3GE13zK9RjqemM32txX3LD5gYx9C+DP2lgKvTACmMxqQ1anAvQoguRYtGVyuLaO97LedAVEVS/iKaMLoHN2qNEn8j2TFe4oKpJhqOI=,iv:i6NkwuwonEoApXHi61JkZt2eG5nlIECwoN3+DF6sww8=,tag:QYDvrJEcd9ydl/Ia8C8pPg==,type:str]
+    lastmodified: "2022-06-05T23:53:05Z"
+    mac: ENC[AES256_GCM,data:3t3ZAxKN+Z0LiPiXhA1SbkkZlJLqS9TGw+WufBBwgactaY1+sYwfYZYOhqPtLyumk/1SUxqdEbIC8Z1LkN6xRXLDX4JIjqeikKS/KB1wrqZYM35MkvBs9Dl0Shlk38Lw1f7F+lhGIww1sKQSaJxiFbkA+EQ5DulpIGe9YU/xfx0=,iv:4/exAG+Ywyu+2Lt47VeOYruQlTg918MYNBvzcH8xKtQ=,tag:vsDI+Zx0U8D/8QB4USF0+w==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
