--- a/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
+++ b/provision/ansible/inventory/host_vars/k3s-master-01.sops.yml
@@ -1,23 +1,23 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:aaY=,iv:fu52MuvlKbck6WY/l95xnllxX1/kTHSpCAUwYQSsBnc=,tag:nAzNWTlczocjOQ1uFyDpcg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:i1Mq4yL2II2ZupZ0+tM=,iv:ongrgH9DvcX8OwAwQJwH7OP0wfcFhR8zB6Ih2wQUACc=,tag:l+R85vhGKmwYD+6dlqElRA==,type:str]
+ansible_user: ENC[AES256_GCM,data:c3U=,iv:V9pS2CaD3YjoFqMgSKC+edS1/kRacEI1bPULYewueHo=,tag:wi+aYSfWN3hKYwPfaevr9g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:NSL3EQqCmfe7lNwQCHw=,iv:UPWgFC2TaSmMylHv2HsChlqpoTi4czibhvm55jx1iPk=,tag:0yLaEDSrueGgZ82iXwnCHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1fk8cpzq0vpmeyrs3x09xdnccfhmcfx65yyf35a0kka9twn8drywscfy3dp
+        - recipient: age1vd5j7kge9c8w8t3aj3ekk4gp98fxhaqaptj224yl9aq3nekns30qneex5d
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCVWd1OEgwN3F1azlrb2xF
-            eExKczQ0ZUlNMENObjNlODA4OSs3YlRSdHdzCmZXMXU3U0JkR3V4MkJJRTBET1N4
-            L3FvVkZTWlVnNGhsSVhlUnNvVTFkRDQKLS0tIGtVRDd4eUVuZDBoeFBDdy9aSVpZ
-            RVY4QmRDeS8wU3p6OXBqcHFtQkl5b2MKecF/RXTu2C35QXbu3RTqSPiHx2hiv/bx
-            h7Tea+wqytD80Fe47oeuYUQUkhATpLWuAOY7Ho1UpssYcaAEBzHNzw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzcGk1RHFXdkpuTCtxZHg5
+            UGtUYXFLc1hwYVdWd0ZVcnFFMlBjY1BrUFJjCm81WU9GRXpqTWlLQVRtREcvVCtW
+            VUluN3F4WE0rc0FuMGk1UFVkenZWcXMKLS0tIE83TG5mcGh3NDAycDZkZnlXcGlk
+            SjNaVWV0Tk85TGpraDc3blFFem1WRDAKmpy1zo72jWdDePf3WTht/7tRa2Iz4IMs
+            2Tpk/dM9vXJURkwNjgXxBS72wws2dkR9uJjetetFt8uAOn+IN0bPug==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-27T17:45:17Z"
-    mac: ENC[AES256_GCM,data:tIU6kZY8pENn5LZfi0nzkgVYYyC9CAXS8A5cYANtfWhJ9bazhD4x+gHrDhtlFAwT5O0RW+w/Re1nRs3+9K0iZYZsbM863uCCnZPSYggWib5gPeg1a8FFRx3cqHAHn8+S09xVM7DFotMFi0x0eQC01pvchIUz6taYWrKH/IlDtDQ=,iv:7xpVzCFzLDbjTX9pkXM00qOntHCKMqOHy+gvSzLm298=,tag:56a8CnmDwyWeSAfTx/+Tuw==,type:str]
+    lastmodified: "2022-06-05T23:53:05Z"
+    mac: ENC[AES256_GCM,data:lEp4wFuFGwFP/bzRr5YqB1l0GOSMYZOCaFIog7H+cVMH87thjPTo43AWQRCXLsesCLDlnY8Il022mvvo/nmN176U1JMvutW3Ia9UFmrRiTRgLJEmlIv2wIWF00TT/SsgHAFc8uv+7DSOa0ZhtxB8AVadKJ+TVrUQIuIPS+7DsRY=,iv:UhcU/FUPYKB6Czl4fM7YNrm5YJHvha90wsKVEk3bM4I=,tag:Iz6qLikXG1yYCXoU+PJXJA==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.3
