--- a/provision/ansible/inventory/inventory.yml
+++ b/provision/ansible/inventory/inventory.yml
@@ -4,7 +4,7 @@
 [k3s_worker]
 192.168.50.225 hostname=k3s-worker-01
 192.168.50.105 hostname=k3s-worker-02
-
+192.168.50.78 hostname=k3s-worker-03
 
 [k3s_cluster:children]
 k3s_master
