--- a/provision/ansible/playbooks/nuke.yml
+++ b/provision/ansible/playbooks/nuke.yml
@@ -1,13 +1,13 @@
 ---
 - hosts: k3s_cluster
-  gather_facts: yes
-  become: yes
+  gather_facts: true
+  become: true
   roles:
     - role: nuke
 
 - name: Reboot Servers
   hosts: node, master
-  gather_facts: no
+  gather_facts: false
   become: true
   tasks:
     - name: Reboot machine
