--- a/cluster/base/flux-system/gotk-sync.yaml
+++ b/cluster/base/flux-system/gotk-sync.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 5m0s
   ref:
-    branch: main
+    branch: infra
   url: https://github.com/mcclaren00/ladder-toolbox
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
