--- a/upsite/package.json
+++ b/upsite/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "history": "^5.3.0",
     "react": "^18.1.0",
@@ -11,7 +12,7 @@
     "react-button": "^1.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
