--- a/cluster/apps/networking/k8s-gateway/helm-release.yaml
+++ b/cluster/apps/networking/k8s-gateway/helm-release.yaml
@@ -9,20 +9,33 @@ spec:
   chart:
     spec:
       chart: k8s-gateway
-      version: 1.1.7
+      version: 1.1.9
       sourceRef:
         kind: HelmRepository
         name: k8s-gateway
         namespace: flux-system
       interval: 5m
-    values:
-      fullnameOverride: k8s-gateway
-      domain: ${SECRET_DOMAIN}
-      ttl: 1
-      service:
-        type: LoadBalancer
-        port: 53
-        annotations:
-          metallb.universe.tf/loadBalancerIPs: "${METALLB_K8S_GATEWAY_ADDR}"
-        externalTrafficPolicy: Local
- 
+  values:
+    fullnameOverride: k8s-gateway
+    domain: ${SECRET_DOMAIN}
+    ttl: 1
+    service:
+      type: LoadBalancer
+      port: 53
+      annotations:
+        metallb.universe.tf/loadBalancerIPs: "${METALLB_K8S_GATEWAY_ADDR}"
+      externalTrafficPolicy: Local
+    # Increase replicaCount and set an anti-affinity if you wish to scale this
+    # replicaCount: 1
+    # affinity:
+    #   podAntiAffinity:
+    #     preferredDuringSchedulingIgnoredDuringExecution:
+    #       - weight: 100
+    #         podAffinityTerm:
+    #           labelSelector:
+    #             matchExpressions:
+    #               - key: app.kubernetes.io/name
+    #                 operator: In
+    #                 values:
+    #                   - k8s-gateway
+    #           topologyKey: kubernetes.io/hostname
