--- a/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/cron-job.yaml
@@ -18,7 +18,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: cloudflare-ddns
-              image: ghcr.io/bitnami/kubectl:latest
+              image: ghcr.io/k8s-at-home/kkubectl:v1.24.1
               envFrom:
                 - secretRef:
                     name: cloudflare-ddns
