--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,10 @@ repos:
     rev: v8.8.7
     hooks:
       - id: gitleaks
+      
+  - repo: https://github.com/gitguardian/ggshield
+    rev: main
+    hooks:
+      - id: ggshield
+        language_version: python3
+        stages: [commit]
