--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -13,3 +13,11 @@ kubernetes:
           ansible_host: 192.168.50.105
         k3s-worker-03:
           ansible_host: 192.168.50.78
+        k3s-worker-04:
+          ansible_host: 192.168.50.133
+        k3s-worker-05:
+          ansible_host: 192.168.50.185
+        k3s-worker-06:
+          ansible_host: 192.168.50.186
+        k3s-worker-07:
+          ansible_host: 192.168.50.220
