--- a/cluster/apps/default/echo-server/helm-release.yaml
+++ b/cluster/apps/default/echo-server/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
       enabled: true
       ingressClassName: "traefik"
       annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        cert-manager.io/cluster-issuer: "letsencrypt-staging"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         external-dns/is-public: "true"
         hajimari.io/enable: "true"
